@@ -11,13 +11,12 @@
             <group :script_path="buffs/">
                 <post :hook_id="hudmanagerpd2" :script_path="EHIBuffTracker.lua"/>
                 <post :hook_id="hudmanagerpd2" :script_path="EHIGaugeBuffTracker.lua"/>
-                <post :hook_id="hudmanagerpd2" :script_path="EHIDodgeChanceTracker.lua"/>
+                <post :hook_id="hudmanagerpd2" :script_path="EHIDodgeChanceBuffTracker.lua"/>
                 <post :hook_id="hudmanagerpd2" :script_path="EHIBikerBuffTracker.lua"/>
-                <post :hook_id="hudmanagerpd2" :script_path="EHIHostageTakerMuscleRegenBuffTracker.lua"/>
                 <post :hook_id="hudmanagerpd2" :script_path="EHIMeleeChargeBuffTracker.lua"/>
-                <post :hook_id="hudmanagerpd2" :script_path="EHIUppersRangeTracker.lua"/>
+                <post :hook_id="hudmanagerpd2" :script_path="EHIUppersRangeBuffTracker.lua"/>
                 <post :hook_id="hudmanagerpd2" :script_path="EHIBerserkerBuffTracker.lua"/>
-                <post :hook_id="hudmanagerpd2" :script_path="EHICritChanceTracker.lua"/>
+                <post :hook_id="hudmanagerpd2" :script_path="EHICritChanceBuffTracker.lua"/>
                 <post :hook_id="hudmanagerpd2" :script_path="SimpleBuffEdits.lua"/>
             </group>
             <post :hook_id="hudmanager" :script_path="HUDManager.lua" />
